Added Hosted Services to Web Client

--- a/BitClient/appsettings.Development.json
+++ b/BitClient/appsettings.Development.json
@@ -1,9 +1,14 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "HostedServicesSettings": {
+    "BitClientQueueProcessorInterval": 1000,
+    "TorrentDownloadPath": "DownloadTorrents",
+    "TorrentUploadPath": "UploadedTorrents"
   }
 }
