--- a/BitClient/appsettings.Development.json
+++ b/BitClient/appsettings.Development.json
@@ -8,7 +8,6 @@
   },
   "HostedServicesSettings": {
     "BitClientQueueProcessorInterval": 3000,
-    "TorrentDownloadPath": "DownloadTorrents",
-    "TorrentUploadPath": "UploadedTorrents"
+    "TorrentDownloadPath": "DownloadTorrents"
   }
 }
