--- a/BitClient.ConsoleAppExample/BitClient.ConsoleAppExample.csproj
+++ b/BitClient.ConsoleAppExample/BitClient.ConsoleAppExample.csproj
@@ -6,11 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="9D4A9495BE35D97B13E60D143F37CC38378D8233.torrent" />
+    <None Remove="example.torrent" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="9D4A9495BE35D97B13E60D143F37CC38378D8233.torrent">
+    <Content Include="example.torrent">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
